# nft-rental

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: ci.yml
contract/: Cargo.toml  README.md
contract/src/: externals.rs  lib.rs  utils.rs
contract/src/nft/: core.rs  data_image_svg.txt  enumeration.rs  internal.rs  metadata.rs  mint.rs  mod.rs  util.rs
demo_nft_contract/: Cargo.toml
demo_nft_contract/src/: lib.rs
demo_nft_frontend/: index.html  package.json  vite.config.js
demo_nft_frontend/src/: App.jsx  Home.jsx  NftContract.js  Pet.jsx  RentalContract.js  UserWidget.jsx  index.jsx  near-api.jsx  ui-components.jsx
docs/: NFT Rental Standard Draft.md
frontend/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: AboutPage.jsx  AcceptBorrowingPage.jsx  App.js  App.jsx  AppHome.jsx  AutoInput.jsx  BorrowingsPage.jsx  CurrencySelector.jsx  FtContract.js  GithubIcon.jsx  Header.jsx  Home.jsx  Index.jsx  LendingsPage.jsx  ListingAcceptPage.jsx  ListingCreationPage.jsx  MediumIcon.jsx  MyNftPage.jsx  NewLendingPage.jsx  NftContract.js  NftInfo.jsx  NftPage.jsx  ShopPage.jsx  ShopsPage.jsx  TwitterIcon.jsx  UserWidget.jsx  Utils.js  index.html  index.jsx  main.css  near-api.js  near-api.jsx  near-config.js
integration-tests/: Cargo.toml  README.md
integration-tests/src/: tests.rs
marketplace/: .gitignore  Cargo.toml  README.md
marketplace/src/: externals.rs  ft_callbacks.rs  lib.rs  nft_callbacks.rs
scripts/: init.js  migrate.js  mint_2022.js  set_allowed_fts.js  test_util.txt  view_state_keys.js
(+9 files in other folders)
